Fix text cut-off and add extra home spacing

--- a/assets/css/2-modules/columns.sass
+++ b/assets/css/2-modules/columns.sass
@@ -2,7 +2,7 @@
 
 .content
 	width: calc(100% - 16px)
-	margin-top: 12px
+	margin-top: 32px
 	padding-top: 56px
 	color: $dark
 
@@ -10,6 +10,12 @@
 		padding-bottom: 6px
 		text-transform: uppercase
 		margin: 0
+p
+	width: calc(100% - 16px)
+	
+// .container > :first-child
+	p
+	  width: calc(100% - 16px)
 
 .column-end
 	height: 30vh
