--- a/assets/css/3-layouts/home.sass
+++ b/assets/css/3-layouts/home.sass
@@ -28,10 +28,11 @@
 // columns
 
 .col1
+	width: calc(100% - 16px)
 	position: relative
 	overflow: hidden
 	flex: 1
-	margin-right: 17px
+	margin-right: 32px
 
 	&:last-child
 		margin-right: 0
